8184900: AArch64: Fix overflow in immediate cmp instruction

Use subs instead of cmp to compare BlockZeroingLowLimit.

Reviewed-by: aph